--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description:      Describe your website here.
 logo:             site-logo.png
 disqus_shortname: 
 #Comment out url when working locally to resolve base urls correctly
-url:              http://your-website.com
+url:              http://throwaway5566.github.io
 
 # Owner/author information
 owner:
